--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,371 @@
   --somicMedium: somic-medium;
   --somicRegular: somic-regular;
 }
+
+/* Header */
+.header {
+}
+.header__top {
+  padding-top: 13px;
+  display: flex;
+  border-bottom: #f5f5f5 solid 1px;
+  justify-content: center;
+}
+.header__top-logo {
+  width: 270px;
+  height: 82px;
+}
+.header__top-txt {
+  font-family: var(--somicRegular);
+  font-size: 24px;
+  line-height: 150%;
+  color: #808b97;
+  margin-left: 40px;
+  max-width: 340px;
+  padding-top: 15px;
+}
+.header__like {
+  display: flex;
+  margin-left: 82px;
+  padding-top: 21px;
+}
+.header__like-icon {
+  width: 32px;
+  height: 28px;
+  margin-top: 5px;
+}
+.header__like-main {
+  font-family: var(--somicRegular);
+  font-size: 24px;
+  line-height: 150%;
+  color: #000;
+  margin-left: 13px;
+}
+.header__like-clock {
+  font-family: var(--somicBold);
+  font-size: 24px;
+  line-height: 150%;
+  color: #000;
+  margin-left: 5px;
+}
+.header__number {
+  margin-left: 170px;
+  padding-top: 4px;
+}
+.header__number_menu {
+  display: none;
+}
+.header__number-txt {
+  font-family: var(--somicRegular);
+  font-size: 24px;
+  line-height: 150%;
+  color: #808b97;
+}
+.header__number-numb {
+  font-family: var(--ntr);
+  font-size: 28px;
+  line-height: 150%;
+  color: #000;
+  margin-top: -4px;
+}
+.header__top-btn {
+  position: relative;
+  margin-left: 130px;
+  margin-top: 12px;
+  cursor: pointer;
+}
+.header__top-btn_menu {
+  display: none;
+}
+.header__top-btn_svg {
+  width: 260px;
+}
+.header__top-btn_txt {
+  font-family: var(--somicRegular);
+  font-size: 26px;
+  line-height: 150%;
+  color: #fff;
+  position: absolute;
+  top: 10px;
+  left: 32px;
+}
+.header__middle {
+  padding-top: 26px;
+  padding-bottom: 43px;
+}
+.header__middle_nav {
+  display: flex;
+  gap: 95px;
+  justify-content: center;
+}
+.header__middle_nav a {
+  text-decoration: none;
+}
+.header__middle_nav-link {
+  font-family: var(--somicRegular);
+  font-size: 26px;
+  line-height: 150%;
+  color: #000;
+}
+.header__bottom {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.header__box {
+  max-width: 1858px;
+  width: 100%;
+  background-image: url(../img/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 0 auto;
+  text-align: center;
+  position: relative;
+  border-radius: 40px;
+}
+.header__box-icon {
+  margin-top: 82px;
+  width: 33px;
+  height: 37px;
+}
+.header__box-title {
+  padding-top: 70px;
+  font-family: var(--somicMedium);
+  font-size: 60px;
+  line-height: 125%;
+  text-align: center;
+  color: #fff;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.header__box-title span {
+  color: #ffdb5d;
+}
+.header__box-btn {
+  margin-top: 85px;
+  margin-bottom: 127px;
+  border-radius: 16px;
+  width: 466px;
+  height: 105px;
+  background: linear-gradient(90deg, #005bbf 0%, #1cb2ef 44.74%, #4abf5c 77.27%, #d6e42a 100%);
+  font-family: var(--somicMedium);
+  font-size: 30px;
+  line-height: 150%;
+  text-align: center;
+  color: #fff;
+  text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  border: none;
+}
+.header__box-circle {
+  width: 165px;
+  height: 165px;
+  position: absolute;
+  top: 730px;
+  left: 845px;
+}
+.burger__open {
+  cursor: pointer;
+  display: none;
+  margin-top: 20px;
+  margin-bottom: 15px;
+  margin-left: 30px;
+  border: #015BC1 solid 2px;
+  padding: 15px;
+  border-radius: 25px;
+}
+.burger__open-line {
+  width: 30px;
+  height: 3px;
+  background-color: #015BC1;
+  margin-bottom: 5px;
+}
+.burger__open-line:last-child {
+  margin-bottom: 0;
+}
+.burger__menu {
+  width: 320px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: -320px;
+  background-color: #fff;
+  padding-top: 50px;
+  padding-left: 50px;
+  z-index: 10;
+}
+.burger__menu-inner {
+  display: flex;
+  justify-content: space-between;
+}
+.burger__menu-open {
+  left: 0;
+  animation: burgerOpenX 0.5s linear;
+}
+.burger__menu-close {
+  left: -320px;
+  animation: burgerCloseX 0.5s linear;
+}
+.burger__nav-link {
+  font-size: 20px;
+  margin-bottom: 25px;
+  cursor: pointer;
+  text-decoration: none;
+  font-family: var(--somicRegular);
+  color: #000;
+}
+.burger__close {
+  cursor: pointer;
+  margin-right: 30px;
+}
+.burger__close-line {
+  width: 30px;
+  height: 3px;
+  background-color: black;
+  margin-bottom: 16px;
+}
+.burger__close-line:first-child {
+  transform-origin: top left;
+  transform: rotate(40deg);
+}
+.burger__close-line:last-child {
+  margin-bottom: 0;
+  transform-origin: bottom left;
+  transform: rotate(320deg);
+}
+.burger__end-line {
+  width: 230px;
+  height: 1px;
+  background-color: black;
+  margin-top: 10px;
+}
+@keyframes burgerOpenX {
+  0% {
+    left: -320px;
+  }
+  50% {
+    left: -160px;
+  }
+  100% {
+    left: 0;
+  }
+}
+@keyframes burgerCloseX {
+  0% {
+    left: 0px;
+  }
+  50% {
+    left: -160px;
+  }
+  100% {
+    left: -320px;
+  }
+}
+
+@media screen and (max-width: 1900px) {
+  .header__box-circle {
+    display: none;
+  }
+}
+@media screen and (max-width: 1800px) {
+  .header__top-txt {
+    margin-left: 30px;
+  }
+  .header__like {
+    margin-left: 30px;
+  }
+  .header__number {
+    margin-left: 30px;
+  }
+  .header__top-btn {
+    margin-left: 30px;
+  }
+  .header__middle_nav {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 1500px) {
+  .burger__open {
+    display: block;
+  }
+  .header__number {
+    display: none;
+  }
+  .header__number_menu {
+    display: block;
+    margin-left: 0px;
+    margin-top: 10px;
+  }
+  .header__middle {
+    display: none;
+  }
+  .header__bottom {
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .header__like {
+    display: none;
+  }
+  .header__box-title {
+    font-size: 40px;
+  }
+}
+@media screen and (max-width: 1080px) {
+  .header__top {
+    justify-content: space-between;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .header__top-txt {
+    display: none;
+  }
+  .header__box-title {
+    font-size: 32px;
+    max-width: 700px;
+  }
+  .header__box-btn {
+    width: 300px;
+    height: 80px;
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .header__top-btn {
+    display: none;
+  }
+  .header__top-btn_menu {
+    display: block;
+    margin-left: 0;
+  }
+  .header__top-btn_svg {
+    width: 230px;
+  }
+  .header__top-btn_txt {
+    font-size: 22px;
+  }
+  .header__box-title {
+    font-size: 28px;
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .header__box-title {
+    font-size: 18px;
+    max-width: 230px;
+    line-height: 170%;
+  }
+  .header__box-btn {
+    width: 200px;
+    height: 60px;
+    font-size: 14px;
+  }
+  .header__top-logo {
+    width: 150px;
+    height: 50px;
+  }
+  .header__top {
+    align-items: center;
+  }
+}
